[project]
name = "mohe-mcp-server"
version = "0.1.0"
description = "test mcp server"
requires-python = ">=3.13"
dependencies = [
    "build>=1.3.0",
    "fastmcp>=2.12.3",
    "hatchling>=1.27.0",
    "mcp[cli]>=1.14.1",
    "twine>=6.2.0",
]

[project.scripts]
mohe_mcp_server = "mohe_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
